--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,7 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
-    <script defer src="./fetchData.js"></script>
+    <script defer src="./script.js"></script>
   </head>
   <body>
     <header>
