--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -12,7 +12,7 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
-    <script defer src="./script.js"></script>
+     <script defer src="./login.js"></script>
   </head>
   <body>
     <header>
@@ -29,7 +29,7 @@
     <main>
        <section id="login">
     <h2>Log In</h2>
-        <form action="#" method="post">
+        <form id="login-form" action="#" method="post">
           <label for="email">E-mail</label>
           <input type="email" name="email" id="email" />
           <label for="password">Mot de passe</label>
