--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,7 +16,9 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
-    <script defer src="./script.js"></script>
+    <script defer type="module" src="./script.js"></script>
+    <script defer type="module" src="./loggedIn.js"></script>
+    <script defer type="module" src="./modal.js"></script>
   </head>
   <body>
     <header>
